--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.1",
     "axios": "^0.21.1",
     "mint-ui": "^2.2.13",
+    "mockjs": "^1.1.0",
     "swiper": "^6.8.0",
     "vue": "^2.5.2",
     "vue-router": "^3.5.2",
