--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@better-scroll/core": "^2.4.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "mint-ui": "^2.2.13",
     "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "swiper": "^6.8.0",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
@@ -62,7 +65,7 @@
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
