--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gshop-meituan",
   "version": "1.0.0",
   "description": "A Vue.js project",
+  "author": "小吴 <2426631242@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
