--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "@better-scroll/core": "^2.4.1",
-    "axios": "^0.21.1",
-    "date-fns": "^2.23.0",
+    "axios": "^0.18.0",
+    "date-fns": "^1.29.0",
     "mint-ui": "^2.2.13",
-    "mockjs": "^1.1.0",
-    "moment": "^2.29.1",
+    "mockjs": "^1.0.1-beta3",
+    "moment": "^2.22.1",
     "swiper": "^6.8.0",
     "vue": "^2.5.2",
-    "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.5.2",
+    "vue-lazyload": "^1.2.3",
+    "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -61,12 +61,11 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "style-loader": "^3.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-loader": "^13.7.3",
+    "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
